--- a/web/index.html
+++ b/web/index.html
@@ -3,10 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>언클라우디 코퍼레이션 - unclou:D for a better future</title>
     <meta name="description" content="" />
     <meta name="keywords" content="" />
     <meta name="robots" content="noindex, nofollow" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <title>언클라우디 코퍼레이션 - unclou:D for a better future</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav id="navbar">
+        <div class="container">
+          <h1><a href="index.html">unclou:D</a></h1>
+          <ul>
+            <li><a href="about.html">about</a></li>
+            <li><a href="brand.html">brand</a></li>
+            <li><a href="project.html">project</a></li>
+            <li><a href="contact.html">contact</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+  </body>
 </html>
