--- a/web/index.html
+++ b/web/index.html
@@ -22,6 +22,21 @@
           </ul>
         </div>
       </nav>
+      <div id="showcase">
+        <div class="container">
+          <div class="showcase-content">
+            <h1>
+              <span class="text-primary">Enjoy</span>
+              your stay
+            </h1>
+            <p class="lead">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit amet,
+              delectus tenetur commodi eum ad!
+            </p>
+            <a class="btn" href="about.html">Add our Hotel</a>
+          </div>
+        </div>
+      </div>
     </header>
   </body>
 </html>
