--- a/web/index.html
+++ b/web/index.html
@@ -3,39 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
-    <meta name="robots" content="noindex, nofollow" />
-    <link rel="stylesheet" href="./css/style.css" />
-    <title>언클라우디 코퍼레이션 - unclou:D for a better future</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+      integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="/css/framework.css" />
+    <link rel="stylesheet" href="/css/style.css" />
+    <title>언클라우디 - unclou:D makes the world a better place.</title>
   </head>
   <body>
-    <header>
-      <nav id="navbar">
-        <div class="container">
-          <h1><a href="index.html">unclou:D</a></h1>
-          <ul>
-            <li><a href="about.html">about</a></li>
-            <li><a href="brand.html">brand</a></li>
-            <li><a href="project.html">project</a></li>
-            <li><a href="contact.html">contact</a></li>
-          </ul>
-        </div>
+    <header class="hero">
+      <nav class="navbar">
+        <h1 class="logo"></h1>
+        <ul>
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
+          <li><a href=""></a></li>
+        </ul>
       </nav>
-      <div id="showcase">
-        <div class="container">
-          <div class="showcase-content">
-            <h1>
-              <span class="text-primary">Enjoy</span>
-              your stay
-            </h1>
-            <p class="lead">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit amet,
-              delectus tenetur commodi eum ad!
-            </p>
-            <a class="btn" href="about.html">Add our Hotel</a>
-          </div>
-        </div>
+      <div class="content">
+        <h1></h1>
       </div>
     </header>
   </body>
