--- a/web/index.html
+++ b/web/index.html
@@ -9,21 +9,25 @@
       integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/css/framework.css" />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="./css/framework.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>언클라우디 - unclou:D makes the world a better place.</title>
   </head>
   <body>
     <header class="hero">
-      <nav class="navbar">
-        <h1 class="logo"></h1>
+      <div id="navbar" class="navbar">
+        <h1 class="logo">
+          unclou
+          <span class="text-smile">:D</span>
+        </h1>
         <ul>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
+          <li><a href="">About</a></li>
+          <li><a href="">Brand</a></li>
+          <li><a href="">Product</a></li>
+          <li><a href="">Project</a></li>
+          <li><a href="">Contact</a></li>
         </ul>
-      </nav>
+      </div>
       <div class="content">
         <h1></h1>
       </div>
